Fix wrapped dates in data tables (#299)

--- a/src/components/PesterDataTable/style.css
+++ b/src/components/PesterDataTable/style.css
@@ -6,6 +6,10 @@
   text-align: right;
 }
 
+.pester-data-table.nowrap {
+  white-space: nowrap;
+}
+
 .pester-data-table, .pester-data-table.center {
   text-align: center;
 }
